# NHLMachineLearning

./: .gitignore  README.md  pyproject.toml
configs/: moneyline_validation_protocol_v1.json  pbp_40_game_pilot.yaml  pbp_five_game_pilot.yaml  pbp_pilot.yaml  pbp_season_20212022.yaml  pbp_season_20222023.yaml  pbp_season_20232024.yaml  pbp_season_20242025.yaml  pilot_dates.yaml  pilot_selection.yaml  project.yaml  season_scale_regular_season.yaml  source_registry.yaml
docs/: methodology.md  pilot.md  source_registry.md  temporal_integrity.md
scripts/: audit_40_game_event_owner_semantics.py  audit_40_game_pbp_coverage.py  audit_season_scale_pbp_coverage.py  build_40_game_pbp_manifest.py  build_40_game_pregame_features.py  build_40_game_team_game_aggregates.py  build_experiment_dataset_bundle.py  build_five_game_pilot.py  build_multiseason_pilot.py  build_season_scale_manifest.py  build_season_scale_model_ready_panel.py  build_season_scale_pbp_batches.py  build_season_scale_pregame_features.py  build_season_scale_team_game_aggregates.py  build_season_scale_verified_inventory.py  canonicalize_nhl_pbp.py  canonicalize_nhl_score_file.py  import_nhl_score_file.py  process_40_game_pbp_batch.py  process_five_game_pbp_batch.py  process_manual_nhl_pbp.py  process_season_scale_pbp_batch.py  run_moneyline_baseline_selection.py
tests/: test_40_game_pbp_manifest.py  test_config.py  test_event_owner_semantics.py  test_experiment_dataset.py  test_five_game_pilot.py  test_model_ready_panel.py  test_moneyline_baselines.py  test_multiseason_pilot.py  test_nhl_game_canonicalization.py  (+16 more)
(+29 files in other folders)
